Bug 385719. Allow text substrings passed to gfxTextRun APIs to start or end in the middle of a cluster. r+a=pavlov